# tilingsgui

./: .editorconfig  .gitattribute  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.md  history.json  main.py  mypy.ini  pygame_main.py  pyglet_main.py  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  test.yml
tests/: test_tilingsgui.py
tilingsgui/: __init__.py  _old.py  app.py  colors.py  events.py  files.py  geo.py  geometry.py  graphics.py  gui.py  interface.py  main.py  menu.py  resource.py  state.py  tplot.py  utils.py  widgets.py
