[tool.poetry]
name = "tilingsgui"
version = "0.1.0"
description = ""
authors = ["Permuta Triangle <permutatriangle@gmail.com>"]
keywords = ["gui", "permutation", "tiling"]
repository = "https://github.com/PermutaTriangle/tilingsgui"
license = "BSD-3-Clause"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
pyglet = "^1.5.5"
pyperclip = "^1.8.0"
tilings = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
pylint = "^2.5.3"
mypy = "^0.780"
isort = "^4.3.21"

[tool.poetry.scripts]
tilingsgui = 'tilingsgui.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"