[tool.poetry]
name = "tilingsgui"
version = "0.1.0"
description = "A graphical user interface for tilings"
authors = ["Permuta Triangle <permutatriangle@gmail.com>"]
keywords = ["gui", "permutation", "tiling"]
repository = "https://github.com/PermutaTriangle/tilingsgui"
homepage = "https://github.com/PermutaTriangle/tilingsgui"
license = "BSD-3-Clause"
readme = "README.rst"
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
]
include = ["tilingsgui/resources/img/png/*.png","tilingsgui/resources/img/svg/*.svg"]

[tool.poetry.dependencies]
python = "^3.6"
pyglet = "^1.5.5"
pyperclip = "^1.8.0"
tilings = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
pylint = "^2.5.3"
mypy = "^0.780"
isort = "^4.3.21"
docutils = "^0.16"
rstcheck = "^3.3.1"

[tool.poetry.scripts]
tilingsgui = 'tilingsgui.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"